# guillotine-forecasting

./: .mcp.json  CLAUDE.md  COMPLETE_FIXES_SUMMARY.md  CONVERSATION_SUMMARY.md  CRUSH.md  DEVELOPMENT_LOG.md  EMAIL_NOTIFICATIONS.md  Error_logs.py  FINAL_TEST_RESULTS.md  FIXES_SUMMARY.md  FIX_SUMMARY.md  GEMINI.md  GITHUB_ACTIONS_FIXES.md  GITHUB_ACTIONS_TOURNAMENT_COMPLETE.md  QWEN.md  README.md  TESTING_SUMMARY.md  check_account_details.py  check_account_models.py  check_acx_ai2027.py  check_all_open.py  check_all_query_methods.py  check_all_questions.py  check_all_tournaments.py  check_api_key.py  check_api_methods.py  check_available.py  check_env_vars.py  check_fall_aib.py  check_fall_aib_constants.py  check_fall_aib_slug.py  check_fall_tournament.py  check_openrouter_direct.py  check_openrouter_models.py  check_question_tournaments.py  check_specific_questions.py  check_tournament_methods.py  check_tournaments.py  check_unemployment.py  convert_pdf.py  (+166 more)
.claude/: settings.local.json
.github/workflows/: absolute_basic.yaml  automatic_forecasting.yml  basic_api_test.yaml  basic_debug.yaml  basic_test.yaml  debug_apis.yaml  (+63 more)
documentation/: Approaching Human-Level Forecasting with Language Models.html  converted_markdown.md  research_analysis.md
outputs/: MODEL_CONFIGURATION_STATUS.md  README.md  brightline_multiforecaster_20251006_070846.md  forecastoutput_20250923_105425.md  forecastoutput_20251005_224626.md  forecastoutput_20251006_005216.md  forecastoutput_20251006_065727.md  free_models_test_20251006_065959.md  model_identification_test_20251006_071632.md
(+1 files in other folders)
