[tool.poetry]
name = "metac-bot-template"
version = "0.1.0"
description = ""
authors = ["Vasile Popescu <elisescu@elisescu.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
tenacity = "^8.0.0"
requests = "^2.32.3"
aiohttp = "^3.9.0"
json5 = "^0.9.0"
pytz = "^2023.3"
streamlit = "^1.28.0"
pandas = "^2.0.0"
numpy = "^2.3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.15.0"
openai = "^1.57.4"
anthropic = "^0.7.0"
litellm = "^1.0.0"
asknews-sdk = "^0.1.0"
exa-py = "^1.0.0"
websockets = "^12.0"
asyncio-mqtt = "^0.13.0"
paho-mqtt = "^1.6.0"
ntfy = {extras = ["cli"], version = "^2.7.0"}
forecasting-tools = "^0.2.54"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

